@@ -1,52 +1,18 @@
-import com.github.jengelman.gradle.plugins.shadow.tasks.ConfigureShadowRelocation
-
-buildscript {
-    repositories {
-        gradlePluginPortal()
-        mavenCentral()
-    }
-    dependencies {
-        classpath "com.gradle.publish:plugin-publish-plugin:0.16.0"
-        classpath 'org.ajoberstar:gradle-git-publish:3.0.0'
-        classpath "com.github.node-gradle:gradle-node-plugin:3.1.1"
-    }
-}
+import com.github.jengelman.gradle.plugins.shadow.ShadowPlugin
+import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
 
 plugins {
     id 'groovy'
     id 'project-report'
     id 'idea'
     id 'java-gradle-plugin'
-    id 'signing'
+    id 'com.gradle.plugin-publish' version '1.2.2'
+    id 'org.ajoberstar.git-publish' version '4.2.2'
+    id 'com.github.node-gradle.node' version '7.0.2'
+    id 'com.vanniktech.maven.publish' version "0.29.0"
 }
 
-// Remove the gradleApi so it isn't merged into the jar file.
-configurations.named(JavaPlugin.API_CONFIGURATION_NAME) {
-    dependencies.remove(project.dependencies.gradleApi())
-}
-
-gradlePlugin {
-    automatedPublishing = false
-}
-
-apply plugin: 'com.github.johnrengelman.shadow'
-
-buildScan {
-    termsOfServiceUrl = 'https://gradle.com/terms-of-service'
-    termsOfServiceAgree = 'yes'
-    if (System.env.CI == 'true') {
-        tag 'CI'
-        if (System.env.CIRCLE_TAG) {
-            link 'VCS', "https://github.com/johnrengelman/shadow/tree/${System.env.CIRCLE_TAG}"
-        } else {
-            link 'VCS', "https://github.com/johnrengelman/shadow/tree/${System.env.CIRCLE_BRANCH}"
-        }
-        link 'VCS Commit', "https://github.com/johnrengelman/shadow/commit/${System.env.CIRCLE_SHA1}"
-        if (System.env.CI_PULL_REQUEST) {
-            link 'Pull Request', "${System.env.CI_PULL_REQUEST}"
-        }
-    }
-}
+apply plugin: ShadowPlugin
 
 apply from: file('gradle/docs.gradle')
 apply from: file('gradle/publish.gradle')
@@ -54,32 +20,9 @@ apply from: file('gradle/vuepress.gradle')
 apply from: file('gradle/ghPages.gradle')
 apply from: file('gradle/dependencies.gradle')
 
-repositories {
-    gradlePluginPortal()
-    mavenCentral()
-}
-
-test {
-    useJUnitPlatform()
-
-    if (System.env.CI == 'true') {
-        testLogging.showStandardStreams = true
-        minHeapSize "1g"
-        maxHeapSize "1g"
-    }
-
-    systemProperty 'java.io.tmpdir', buildDir.absolutePath
-}
-
-jar {
-    from rootProject.file('LICENSE')
-    from rootProject.file('NOTICE')
-}
-
-jar.enabled = false
-
-shadowJar {
-    classifier = ''
+java {
+    sourceCompatibility = '1.8'
+    targetCompatibility = '1.8'
 }
 
 idea {
@@ -88,32 +31,41 @@ idea {
     }
 }
 
-sourceCompatibility = '1.8'
-targetCompatibility = '1.8'
+tasks.withType(Test).configureEach {
+    useJUnitPlatform()
 
-task downloadDependencies(type: Exec) {
+    // https://docs.gradle.org/8.8/userguide/performance.html#execute_tests_in_parallel
+    maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
+
+    if (System.env.CI == 'true') {
+        testLogging.showStandardStreams = true
+        minHeapSize "1g"
+        maxHeapSize "1g"
+    }
+
+    systemProperty 'shadowVersion', version
+
+    // Required to test configuration cache in tests when using withDebug()
+    // https://github.com/gradle/gradle/issues/22765#issuecomment-1339427241
+    jvmArgs(
+            "--add-opens", "java.base/java.util=ALL-UNNAMED",
+            "--add-opens", "java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+            "--add-opens", "java.base/java.lang.invoke=ALL-UNNAMED",
+            "--add-opens", "java.base/java.net=ALL-UNNAMED",
+    )
+}
+
+tasks.named('shadowJar', ShadowJar) {
+    from rootProject.file('LICENSE')
+    from rootProject.file('NOTICE')
+    enableRelocation true
+}
+
+tasks.named('ideaModule') {
+    notCompatibleWithConfigurationCache("https://github.com/gradle/gradle/issues/13480")
+}
+
+tasks.register('downloadDependencies', Exec) {
     dependsOn configurations.testRuntimeClasspath
     commandLine 'echo', 'Downloaded all dependencies'
 }
-
-tasks.build.dependsOn tasks.shadowJar
-
-project.tasks.withType(JavaCompile) {
-    // This will be the default in Gradle 5.0
-    if (!options.compilerArgs.contains("-processor")) {
-        options.compilerArgs << '-proc:none'
-    }
-}
-
-project.tasks.withType(GroovyCompile) {
-    // This will be the default in Gradle 5.0
-    if (!options.compilerArgs.contains("-processor")) {
-        options.compilerArgs << '-proc:none'
-    }
-}
-
-task relocateShadowJar(type: ConfigureShadowRelocation) {
-    target = tasks.shadowJar
-}
-
-tasks.shadowJar.dependsOn tasks.relocateShadowJar
